--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -232,5 +232,6 @@
     <string name="current_password_here">Type your current password here</string>
     <string name="current_password">Current Password</string>
     <string name="tc_link"> <a href="">Terms &amp; Conditions</a></string>
+    <string name="max_passengers_allowed">Maximum number of passgeners allowed is %1$s</string>
 
 </resources>
