--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -231,6 +231,8 @@
     <string name="update_password">Update Password</string>
     <string name="current_password_here">Type your current password here</string>
     <string name="current_password">Current Password</string>
+    <string name="flexible">My dates are flexible</string>
+    <string name="choose_date">Choose Date</string>
     <string name="tc_link"> <a href="">Terms &amp; Conditions</a></string>
 
 </resources>
