--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -235,5 +235,6 @@
     <string name="choose_date">Choose Date</string>
     <string name="tc_link"> <a href="">Terms &amp; Conditions</a></string>
     <string name="max_passengers_allowed">Maximum number of passgeners allowed is %1$s</string>
+    <string name="distanceRange">"Distance with in (Kms)"</string>
 
 </resources>
