trip history and reviews

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -239,5 +239,6 @@
     <string name="gender">"Gender"</string>
     <string name="male">"Male"</string>
     <string name="female">"Female"</string>
-
+    <string name="rating">"Rating"</string>
+    <string name="experience_passenger">Experience with passenger</string>
 </resources>
