--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -183,4 +183,6 @@
     <string name="modifications_desc">Trooute оставляет за собой право изменять эти условия в любое время без предварительного уведомления. Продолжая использовать Приложение после внесения изменений, пользователи принимают обновленные условия.</string>
     <string name="update_password">Обновить пароль</string>
     <string name="distanceRange">"Distance with in "</string>
+    <string name="authentication_error">Unable to autheticate</string>
+    <string name="enable_biometric_login">Enable Biometric Login</string>
 </resources>
