--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -185,4 +185,5 @@
     <string name="distanceRange">"Distance with in "</string>
     <string name="authentication_error">Unable to autheticate</string>
     <string name="enable_biometric_login">Enable Biometric Login</string>
+    <string name="no_reviews_yet">No Reviews Yet</string>
 </resources>
