--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -243,5 +243,6 @@
     <string name="experience_passenger">Experience with passenger</string>
     <string name="authentication_error">Unable to autheticate</string>
     <string name="enable_biometric_login">Enable Biometric Login</string>
+    <string name="no_reviews_yet">No Reviews submitted for this User</string>
 
 </resources>
