--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -235,15 +235,17 @@
     <string name="choose_date">Choose Date</string>
     <string name="tc_link"> Agree to <a href="">Terms &amp; Conditions</a></string>
     <string name="max_passengers_allowed">Maximum number of passgeners allowed is %1$s</string>
-    <string name="distanceRange">"Distance with in (Kms)"</string>
+    <string name="distanceRange">"Distance with in (Km)"</string>
     <string name="gender">"Gender"</string>
     <string name="male">"Male"</string>
     <string name="female">"Female"</string>
     <string name="rating">"Rating"</string>
     <string name="experience_passenger">Experience with passenger</string>
-    <string name="authentication_error">Unable to autheticate</string>
+    <string name="authentication_error">Unable to authenticate</string>
     <string name="enable_biometric_login">Enable Biometric Login</string>
     <string name="no_reviews_yet">No Reviews submitted for this User</string>
     <string name="wish_list_added">Trip is added to your wishlist</string>
     <string name="wish_list_removed">Trip is removed from your wishlist</string>
+    <string name="no_wish_list_available">No trip is in your wish list</string>
+
 </resources>
