--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -170,7 +170,6 @@
     <string name="second_fragment_label">Второй фрагмент</string>
     <string name="next">Следующий</string>
     <string name="previous">Предыдущий</string>
-    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Нам в селериске. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Класс aptent tacitisociasquadlitoratorentperconubianostra,perinceptoshimenaeos. Suspendisse blandit eleifend diam, vel rutrum Tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum Tellus.\n\n Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Морби ид великая фелис. Vivamus egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum Tellus dolor sed neque. Morbi Tellus Erat, dapibus ut sem a, iaculistincidunt dui. Interdum et Malesuada Fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae, molestie nibh. Фазеллус и коммодо эрос, нон аликет метус. Sed maximus nisl nec dolor bibendum, vel congue leo egestas.\n\n Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet actor at, mollis non turpis. Nullam pretium libero вестибулум, finibus orci vel, molestie quam. Fusce blandittincidunt nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, etfermentum metus hendrerit id. Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula, in lobortis sem porta sed. Целое число id ultrices magna, in luctus elit. Sed a pellentesque est.\n\n Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Этиам а вененатис нибх. Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis actor varius. Quisque elementum eu libero sed commodo. В конце концов, импердиет или импердиет и др., склеристский и маурис. Pellentesque varius ex nunc, quis imperdiet eros Placerat ac. Duis finibus orci et est auctortincidunt. Sed non viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, россыпь диаметром. Этиам vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.\n\n Phasellus in aliquet mi. Пеллентескный житель morbi tristique senectus et netus et Malesuada Fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus Massa gradida. Pellentesque id Tellus Orci. Integer dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper газированные напитки. Praesent bibendum rhoncus Tellus nec feugiat. В ornare nulla. Donec rhoncus libero vel nunc consequat, quistincidunt nisl eleifend. Cras bibendum enim a justo luctus вестибулум. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.</string>
     <string name="title_activity_stripe_payment">StripePaymentActivity</string>
     <string name="acceptance_of_terms_title">1. Принятие Условий</string>
     <string name="acceptance_of_terms_desc">Получая доступ к мобильному приложению Trooute («Приложение») или используя его, вы соглашаетесь соблюдать настоящие Условия и все применимые законы и правила. Если вы не согласны с каким-либо из этих условий, вам запрещается использовать Приложение или получать к нему доступ.</string>
@@ -182,8 +181,113 @@
     <string name="modifications_title">4. Модификации</string>
     <string name="modifications_desc">Trooute оставляет за собой право изменять эти условия в любое время без предварительного уведомления. Продолжая использовать Приложение после внесения изменений, пользователи принимают обновленные условия.</string>
     <string name="update_password">Обновить пароль</string>
-    <string name="distanceRange">"Distance with in "</string>
-    <string name="authentication_error">Unable to autheticate</string>
-    <string name="enable_biometric_login">Enable Biometric Login</string>
     <string name="no_reviews_yet">No Reviews Yet</string>
+
+
+
+    <string name="current_password_here">Type your current password here</string>
+    <string name="current_password">Current Password</string>
+    <string name="flexible">My dates are flexible</string>
+    <string name="choose_date">Choose Date</string>
+    <string name="tc_link"> Agree to <a href="">Terms &amp; Conditions</a></string>
+    <string name="max_passengers_allowed">Maximum number of passgeners allowed is %1$s</string>
+    <string name="distanceRange">"Distance with in (Km)"</string>
+    <string name="gender">"Gender"</string>
+    <string name="male">"Male"</string>
+    <string name="female">"Female"</string>
+    <string name="rating">"Rating"</string>
+    <string name="experience_passenger">Experience with passenger</string>
+    <string name="authentication_error">Unable to authenticate</string>
+    <string name="enable_biometric_login">Enable Biometric Login</string>
+    <string name="wish_list_added">Trip is added to your wishlist</string>
+    <string name="wish_list_removed">Trip is removed from your wishlist</string>
+    <string name="no_wish_list_available">No trip is in your wish list</string>
+    <string name="pickup_passengers">Pickup Passengers</string>
+    <string name="pickup_passengers_status">Pending Pickup</string>
+    <string name="pickup_passengers_status_details">When you notify passenger to get ready we\'ll send a notification to passenger to get ready for  pickup</string>
+    <string name="notify_pickup">Notify passenger to get ready</string>
+    <string name="pickup_marked">Marked as Pickup</string>
+    <string name="pickedup">Picked up</string>
+    <string name="going_to_pickup">Going To Pickup</string>
+    <string name="passenger_not_showed">Passenger Not Showed up</string>
+    <string name="waiting_to_be_Picked_up">Waiting To Be Picked up</string>
+    <string name="not_Picked_up">Not Picked up</string>
+    <string name="not_showed_up">Not Showed up</string>
+    <string name="status_updated_successfully">Status updated successfully</string>
+    <string name="verification_code">Please enter the verification code sent to your</string>
+    <string name="expired_after">Expired after</string>
+    <string name="bio_login">Biometric login for my app</string>
+    <string name="login_with_bio">Log in using your biometrics</string>
+    <string name="use_password">Use account password</string>
+    <string name="select_gender">Please select gender</string>
+    <string name="password_updated_success">Password Updated successfully</string>
+    <string name="booking">Booking</string>
+    <string name="booking_details">Booking Details</string>
+    <string name="ok">OK</string>
+    <string name="connect_stripe">You can\'t accept this booking. You must have to connect your stripe account to accept this booking. When we accepts you as driver, we have send you and email to connect your stripe account.</string>
+    <string name="less_remaining_seats">You can\'t accept this booking. Remaining available seats are less than from what you are accepting</string>
+    <string name="seats_available">Seats Available</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="no_more_seats">No more seats available</string>
+    <string name="other_relevent_details">Other relevant detail</string>
+    <string name="confirm_booking">Confirm Booking</string>
+    <string name="trooute_safty">How does Trooute ensure user safety?</string>
+    <string name="trooute_safty_answer">Trooute prioritizes user safety by implementing features such as user ratings, reviews, and optional verification badges. We encourage users to provide feedback on their experiences to maintain a safe and reliable community.</string>
+    <string name="cancel_policy">Can I cancel a ride, and what is the cancellation policy?</string>
+    <string name="cancel_policy_answer">Yes, you can cancel a ride. However, please note that no costs will be refunded for cancellations. It\'s important to review and understand our cancellation policy before confirming a ride.</string>
+    <string name="accident_event">What happens in the event of an accident or damage during a ride?</string>
+    <string name="accident_event_answer">Users (both drivers and passengers) are solely responsible for any accidents or damages that may occur during a ride. Trooute assumes no liability for such incidents. Users are encouraged to report any issues promptly through our support channels.</string>
+    <string name="personal_info_secure">Is my personal information secure on Trooute?</string>
+    <string name="personal_info_secure_answer">We take the security of user information seriously. Trooute employs industry-standard security measures to protect user data. For more details, please refer to our Privacy Policy.</string>
+    <string name="travel_companion">Can I choose my travel companions based on preferences?</string>
+    <string name="travel_companion_answer">Yes, allows users to set preferences, such as music preferences, smoking/non-smoking preferences, and other travel-related preferences. This information can help you find compatible travel companions.</string>
+    <string name="contact_customer">How can I contact customer support?</string>
+    <string name="contact_customer_answer">For any inquiries or assistance, you can reach our customer support team at trooute@outlook.com. We are here to help with any questions or concerns you may have.</string>
+    <string name="update_car_info">Update Car Info</string>
+    <string name="become_driver">Become a Driver</string>
+    <string name="vehicle">Vehicle</string>
+    <string name="license">License</string>
+    <string name="white">White</string>
+    <string name="black">Black</string>
+    <string name="gray">Gray</string>
+    <string name="silver">Silver</string>
+    <string name="blue">Blue</string>
+    <string name="red">Red</string>
+    <string name="brown">Brown</string>
+    <string name="green">Green</string>
+    <string name="orange">Orange</string>
+    <string name="beige">Beige</string>
+    <string name="purple">Purple</string>
+    <string name="gold">Gold</string>
+    <string name="yellow">Yellow</string>
+    <string name="image_require">image is required</string>
+    <string name="field_blank">field can\'t be blank</string>
+    <string name="accept_term_conditions">Please accept terms and conditions</string>
+    <string name="please_select">Please select</string>
+    <string name="email_blank">Email can\'t be blank</string>
+    <string name="email_valid">Email is not valid</string>
+    <string name="no_not_correct">Phone number is not correct</string>
+    <string name="pass_not_blank">Password can\'t be blank</string>
+    <string name="password_rule">Password needs to consist of at least 8 characters</string>
+    <string name="password_blank">Retype your password can\'t be blank</string>
+    <string name="pass_match">Passwords not matched</string>
+    <string name="notification_trip_update">You\'ll not get notification if your trip is updated</string>
+    <string name="reques_pending">(Request pending)</string>
+    <string name="ratting_submitted">Rating submitted successfully!</string>
+    <string name="flexible_days">Flexible days can\'t be greater than 365</string>
+    <string name="start_locaction">Start location</string>
+    <string name="destination_location">Destination location</string>
+    <string name="no_on_going_trip">You do not have any ongoing trip</string>
+    <string name="no_trip">No trip found</string>
+    <string name="can_not_start_trip">You can\'t start trip until all passengers are marked as pickup.\nIf a passenger is not showed up you need to mark as Not Showed Up</string>
+    <string name="search_results">Search results for Trip</string>
+    <string name="set_up_trip">Set Up Your Trip</string>
+    <string name="price">Price</string>
+    <string name="seats_left">Seats Left</string>
+    <string name="no_seats_available">No seats available</string>
+    <string name="review_posted_success">Review posted successfully</string>
+    <string name="trip">Trip</string>
+    <string name="comment_required">Comment Required</string>
+    <string name="select_rating">Please select rating</string>
 </resources>
