--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,6 @@
     <string name="trip_details">Trip Details</string>
     <string name="book_now">Book now</string>
     <string name="end_trip">End Trip</string>
-    <string name="pickup_location">Pickup location</string>
     <string name="from">From</string>
     <string name="enter_starting_location">Enter starting location</string>
     <string name="where_to">Where to</string>
@@ -180,45 +179,7 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-
-    <string name="lorem_ipsum">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
-        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
-        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
-        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
-        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
-        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
-        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
-        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
-        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
-        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
-        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
-        bibendum, vel congue leo egestas.\n\n
-        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
-        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
-        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
-        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
-        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
-        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
-        est.\n\n
-        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
-        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
-        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
-        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
-        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
-        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
-        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
-        convallis.\n\n
-        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
-        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
-        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
-        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
-        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
-        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
-        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
-    </string>
     <string name="title_activity_stripe_payment">StripePaymentActivity</string>
-
     <string name="acceptance_of_terms_title">1. Acceptance of Terms</string>
     <string name="acceptance_of_terms_desc">By accessing or using the Trooute mobile application ("the App"), you agree to be bound by these Terms and Conditions and all applicable laws and regulations. If you do not agree with any of these terms, you are prohibited from using or accessing the App.</string>
     <string name="user_responsibilities_title">2. User Responsibilities</string>
@@ -258,4 +219,83 @@
     <string name="waiting_to_be_Picked_up">Waiting To Be Picked up</string>
     <string name="not_Picked_up">Not Picked up</string>
     <string name="not_showed_up">Not Showed up</string>
+    <string name="status_updated_successfully">Status updated successfully</string>
+    <string name="verification_code">Please enter the verification code sent to your</string>
+    <string name="expired_after">Expired after</string>
+    <string name="bio_login">Biometric login for my app</string>
+    <string name="login_with_bio">Log in using your biometrics</string>
+    <string name="use_password">Use account password</string>
+    <string name="select_gender">Please select gender</string>
+    <string name="password_updated_success">Password Updated successfully</string>
+    <string name="booking">Booking</string>
+    <string name="booking_details">Booking Details</string>
+    <string name="ok">OK</string>
+    <string name="connect_stripe">You can\'t accept this booking. You must have to connect your stripe account to accept this booking. When we accepts you as driver, we have send you and email to connect your stripe account.</string>
+    <string name="less_remaining_seats">You can\'t accept this booking. Remaining available seats are less than from what you are accepting</string>
+    <string name="seats_available">Seats Available</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="no_more_seats">No more seats available</string>
+    <string name="pickup_location">Pickup location</string>
+    <string name="other_relevent_details">Other relevant detail</string>
+    <string name="confirm_booking">Confirm Booking</string>
+    <string name="trooute_safty">How does Trooute ensure user safety?</string>
+    <string name="trooute_safty_answer">Trooute prioritizes user safety by implementing features such as user ratings, reviews, and optional verification badges. We encourage users to provide feedback on their experiences to maintain a safe and reliable community.</string>
+    <string name="cancel_policy">Can I cancel a ride, and what is the cancellation policy?</string>
+    <string name="cancel_policy_answer">Yes, you can cancel a ride. However, please note that no costs will be refunded for cancellations. It\'s important to review and understand our cancellation policy before confirming a ride.</string>
+    <string name="accident_event">What happens in the event of an accident or damage during a ride?</string>
+    <string name="accident_event_answer">Users (both drivers and passengers) are solely responsible for any accidents or damages that may occur during a ride. Trooute assumes no liability for such incidents. Users are encouraged to report any issues promptly through our support channels.</string>
+    <string name="personal_info_secure">Is my personal information secure on Trooute?</string>
+    <string name="personal_info_secure_answer">We take the security of user information seriously. Trooute employs industry-standard security measures to protect user data. For more details, please refer to our Privacy Policy.</string>
+    <string name="travel_companion">Can I choose my travel companions based on preferences?</string>
+    <string name="travel_companion_answer">Yes, allows users to set preferences, such as music preferences, smoking/non-smoking preferences, and other travel-related preferences. This information can help you find compatible travel companions.</string>
+    <string name="contact_customer">How can I contact customer support?</string>
+    <string name="contact_customer_answer">For any inquiries or assistance, you can reach our customer support team at trooute@outlook.com. We are here to help with any questions or concerns you may have.</string>
+    <string name="update_car_info">Update Car Info</string>
+    <string name="become_driver">Become a Driver</string>
+    <string name="vehicle">Vehicle</string>
+    <string name="license">License</string>
+    <string name="white">White</string>
+    <string name="black">Black</string>
+    <string name="gray">Gray</string>
+    <string name="silver">Silver</string>
+    <string name="blue">Blue</string>
+    <string name="red">Red</string>
+    <string name="brown">Brown</string>
+    <string name="green">Green</string>
+    <string name="orange">Orange</string>
+    <string name="beige">Beige</string>
+    <string name="purple">Purple</string>
+    <string name="gold">Gold</string>
+    <string name="yellow">Yellow</string>
+    <string name="image_require">image is required</string>
+    <string name="field_blank">field can\'t be blank</string>
+    <string name="accept_term_conditions">Please accept terms and conditions</string>
+    <string name="please_select">Please select</string>
+    <string name="email_blank">Email can\'t be blank</string>
+    <string name="email_valid">Email is not valid</string>
+    <string name="no_not_correct">Phone number is not correct</string>
+    <string name="pass_not_blank">Password can\'t be blank</string>
+    <string name="password_rule">Password needs to consist of at least 8 characters</string>
+    <string name="password_blank">Retype your password can\'t be blank</string>
+    <string name="pass_match">Passwords not matched</string>
+    <string name="notification_trip_update">You\'ll not get notification if your trip is updated</string>
+    <string name="reques_pending">(Request pending)</string>
+    <string name="ratting_submitted">Rating submitted successfully!</string>
+    <string name="flexible_days">Flexible days can\'t be greater than 365</string>
+    <string name="start_locaction">Start location</string>
+    <string name="destination_location">Destination location</string>
+    <string name="no_on_going_trip">You do not have any ongoing trip</string>
+    <string name="no_trip">No trip found</string>
+    <string name="can_not_start_trip">You can\'t start trip until all passengers are marked as pickup.\nIf a passenger is not showed up you need to mark as Not Showed Up</string>
+    <string name="search_results">Search results for Trip</string>
+    <string name="set_up_trip">Set Up Your Trip</string>
+    <string name="price">Price</string>
+    <string name="seats_left">Seats Left</string>
+    <string name="no_seats_available">No seats available</string>
+    <string name="review_posted_success">Review posted successfully</string>
+    <string name="trip">Trip</string>
+    <string name="comment_required">Comment Required</string>
+    <string name="select_rating">Please select rating</string>
+
 </resources>
