--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,7 +154,7 @@
     <string name="become_a_driver">Become a Driver</string>
     <string name="driver_mode">Driver Mode</string>
     <string name="your_profile">Profile</string>
-    <string name="wishlist">Book Mark</string>
+    <string name="wishlist">Bookmark</string>
     <string name="create_a_new_trip">Create a new trip</string>
     <string name="trip_history">Trip History</string>
     <string name="payment_and_withdraw">Payment and withdraw</string>
@@ -205,8 +205,8 @@
     <string name="authentication_error">Unable to authenticate</string>
     <string name="enable_biometric_login">Enable Biometric Login</string>
     <string name="no_reviews_yet">No Reviews submitted for this User</string>
-    <string name="wish_list_added">Trip is added to your wishlist</string>
-    <string name="wish_list_removed">Trip is removed from your wishlist</string>
+    <string name="wish_list_added">Trip is added to your bookmark</string>
+    <string name="wish_list_removed">Trip is removed from your bookmark</string>
     <string name="no_wish_list_available">No trip is in your wish list</string>
     <string name="pickup_passengers">Pickup Passengers</string>
     <string name="pickup_passengers_status">Pending Pickup</string>
@@ -307,7 +307,15 @@
     <string name="hand_carry">Hand carry</string>
     <string name="luggage_weight">weight (kg)</string>
     <string name="suitcase">Suitcase</string>
-
+    <string name="smoking">Smoking</string>
+    <string name="pets">Pets</string>
+    <string name="pets_allowed">Pets Allowed</string>
+    <string name="language">Language</string>
+    <string name="driver">Driver</string>
+    <string name="remaining_time_more_than_12h">You can\'t start pickup passengers 12 hours before.</string>
+    <string name="alert">Alert</string>
+    <string name="sure_cancel_trip">Are you sure you want to cancel this trip. If you\'ll cancel this trip, your confirmed bookings will be refunded as well.</string>
+    <string name="pickup_status">Pickup Status</string>
 
 
 
