--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -316,7 +316,14 @@
     <string name="alert">Alert</string>
     <string name="sure_cancel_trip">Are you sure you want to cancel this trip. If you\'ll cancel this trip, your confirmed bookings will be refunded as well.</string>
     <string name="pickup_status">Pickup Status</string>
-
-
+    <string name="pickup_started">Pickup started</string>
+    <string name="pickup_started_passenger_details">Driver has started to pick up passengers.</string>
+    <string name="get_ready">Get ready</string>
+    <string name="get_ready_passenger_details">Driver is coming to you to pick you up.</string>
+    <string name="pick_up_passenger_details">Driver marked you as a picked up. if it\'s correct please mark yourself as picked up.</string>
+    <string name="not_showed_up_passenger_details">Driver marked you as not showed up. If it\'s not true you can contact support from settings page.</string>
+    <string name="pick_up_driver_details">Trooute wish you sage journey.</string>
+    <string name="not_showed_up_driver_details">You have marked as driver not showed up. You can contact support from settings page.</string>
+    <string name="not_showed_up_by_passenger_details">Passenger have marked you didn\'t not showed up. Please pick passenger.</string>
 
 </resources>
