fix luggage modle

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -326,4 +326,10 @@
     <string name="not_showed_up_driver_details">You have marked as driver not showed up. You can contact support from settings page.</string>
     <string name="not_showed_up_by_passenger_details">Passenger have marked you didn\'t not showed up. Please pick passenger.</string>
 
+    <string name="trip_status_Canceled">Update trip status to Canceled</string>
+    <string name="trip_status_COMPLETED">Update trip status to COMPLETED</string>
+    <string name="trip_status_INPROGRESS">Update trip status to In Progress</string>
+    <string name="invalid_status">Invalid trip status</string>
+
+
 </resources>
