--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,6 @@
     <string name="app_name">Trooute</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <!--    <string name="google_map_api_key">AIzaSyDIO_qEACm3hS8fQIVwSDOEJRm29wOWsYY</string>-->
-
-    <!--skip a line key-->
-    <string name="google_map_api_key">AIzaSyCN6LRtc9jcbPYNTyE0fFuH-bzmus9D66c</string>
 
     <string name="onboarding_title_1">Welcome to Trooute!</string>
     <string name="onboarding_desc_1">Join travelers, share experiences. Your journey, their company.</string>
@@ -13,8 +9,8 @@
     <string name="onboarding_desc_2">Match with travelers, journey together. Connect, travel, bond.</string>
     <string name="onboarding_title_3">Hassle-Free Bookings</string>
     <string name="onboarding_desc_3">Book rides seamlessly, travel hassle-free. Your seat, a tap away.</string>
-    <string name="onboarding_title_4">Connect and Go</string>
-    <string name="onboarding_desc_4">Chat, plan, explore as companions. New friendships, shared roads.</string>
+    <string name="onboarding_title_4">Connect and Go</string> <!--Not used in app-->
+    <string name="onboarding_desc_4">Chat, plan, explore as companions. New friendships, shared roads.</string> <!--Not used in app-->
 
     <string name="person">/Person</string>
     <string name="trips_around_you">Trips around you</string>
@@ -106,7 +102,7 @@
     <string name="experience_with_driver">Experience with driver</string>
     <string name="rate_the_vehicle">Rate the vehicle</string>
     <string name="share_your_thoughts">Share your thoughts</string>
-    <string name="share_your_thoughts_desc">Share your thoughts about the trip: Did you enjoy the ride? How was the overall experience?</string>
+    <string name="share_your_thoughts_desc">Did you enjoy the ride? How was the overall experience?</string>
     <string name="my_review">My Review</string>
     <string name="driver_review">Driver\'s Review</string>
     <string name="submit">Submit</string>
@@ -114,7 +110,7 @@
     <string name="warning">Warning</string>
     <string name="error">Error</string>
     <string name="experience">Experience</string>
-    <string name="network_message">Please connect your internet connection</string>
+    <string name="network_message">Please connect your mobile with internet</string>
 
     <string name="verification_email_sent">Verification Email sent.</string>
     <string name="session_expired_1">You are not logged in! Please log in to get access.</string>
@@ -186,7 +182,7 @@
     <string name="user_responsibilities_desc">2.1. Liability for Accidents/Damage: Users, both drivers, and passengers, acknowledge and agree that they are solely responsible for any accidents, injuries, or damages that may occur during or as a result of using the App. Trooute assumes no liability for any such incidents.</string>
     <string name="user_responsibilities_desc_2">2.2. Cancellation Policy: No costs will be refunded for cancellations. Users are responsible for understanding and adhering to the cancellation policy outlined in the App.</string>
     <string name="contact_information_title">3. Contact Information</string>
-    <string name="contact_information_desc">For any inquiries or communication related to the App, users may contact us at trooute@outlook.com.</string>
+    <string name="contact_information_desc">For any inquiries or communication related to the App, users may contact us at support@trooute.com.</string>
     <string name="modifications_title">4. Modifications</string>
     <string name="modifications_desc">Trooute reserves the right to modify these terms at any time without prior notice. By continuing to use the App after modifications, users accept the updated terms.</string>
     <string name="update_password">Update Password</string>
@@ -195,7 +191,7 @@
     <string name="flexible">My dates are flexible</string>
     <string name="choose_date">Choose Date</string>
     <string name="tc_link"> Agree to <a href="">Terms &amp; Conditions</a></string>
-    <string name="max_passengers_allowed">Maximum number of passgeners allowed is %1$s</string>
+    <string name="max_passengers_allowed">Maximum number of passengers allowed is %1$s</string>
     <string name="distanceRange">"Distance with in (Km)"</string>
     <string name="gender">"Gender"</string>
     <string name="male">"Male"</string>
@@ -210,7 +206,7 @@
     <string name="no_wish_list_available">No trip is in your wish list</string>
     <string name="pickup_passengers">Pickup Passengers</string>
     <string name="pickup_passengers_status">Pending Pickup</string>
-    <string name="pickup_passengers_status_details">When you notify passenger to get ready we\'ll send a notification to passenger to get ready for  pickup</string>
+    <string name="pickup_passengers_status_details">When you notify passenger to get ready we\'ll send a notification to passenger to get ready for pickup</string>
     <string name="notify_pickup">Notify passenger to get ready</string>
     <string name="pickup_marked">Marked as Pickup</string>
     <string name="pickedup">Picked up</string>
@@ -230,7 +226,7 @@
     <string name="booking">Booking</string>
     <string name="booking_details">Booking Details</string>
     <string name="ok">OK</string>
-    <string name="connect_stripe">You can\'t accept this booking. You must have to connect your stripe account to accept this booking. When we accepts you as driver, we have send you and email to connect your stripe account.</string>
+    <string name="connect_stripe">You can\'t accept this booking. You must have to connect your stripe account to accept this booking. When we have approved you as a driver, we send you an email to connect your stripe account.</string>
     <string name="less_remaining_seats">You can\'t accept this booking. Remaining available seats are less than from what you are accepting</string>
     <string name="seats_available">Seats Available</string>
     <string name="yes">Yes</string>
@@ -242,7 +238,7 @@
     <string name="trooute_safty">How does Trooute ensure user safety?</string>
     <string name="trooute_safty_answer">Trooute prioritizes user safety by implementing features such as user ratings, reviews, and optional verification badges. We encourage users to provide feedback on their experiences to maintain a safe and reliable community.</string>
     <string name="cancel_policy">Can I cancel a ride, and what is the cancellation policy?</string>
-    <string name="cancel_policy_answer">Yes, you can cancel a ride. However, please note that no costs will be refunded for cancellations. It\'s important to review and understand our cancellation policy before confirming a ride.</string>
+    <string name="cancel_policy_answer">Yes, you can cancel a ride. However, It\'s important to review and understand our cancellation terms and conditions  before confirming a ride.</string>
     <string name="accident_event">What happens in the event of an accident or damage during a ride?</string>
     <string name="accident_event_answer">Users (both drivers and passengers) are solely responsible for any accidents or damages that may occur during a ride. Trooute assumes no liability for such incidents. Users are encouraged to report any issues promptly through our support channels.</string>
     <string name="personal_info_secure">Is my personal information secure on Trooute?</string>
@@ -250,7 +246,7 @@
     <string name="travel_companion">Can I choose my travel companions based on preferences?</string>
     <string name="travel_companion_answer">Yes, allows users to set preferences, such as music preferences, smoking/non-smoking preferences, and other travel-related preferences. This information can help you find compatible travel companions.</string>
     <string name="contact_customer">How can I contact customer support?</string>
-    <string name="contact_customer_answer">For any inquiries or assistance, you can reach our customer support team at trooute@outlook.com. We are here to help with any questions or concerns you may have.</string>
+    <string name="contact_customer_answer">For any inquiries or assistance, you can reach our customer support team at support@trooute.com. We are here to help with any questions or concerns you may have.</string>
     <string name="update_car_info">Update Car Info</string>
     <string name="become_driver">Become a Driver</string>
     <string name="vehicle">Vehicle</string>
@@ -277,8 +273,8 @@
     <string name="no_not_correct">Phone number is not correct</string>
     <string name="pass_not_blank">Password can\'t be blank</string>
     <string name="password_rule">Password needs to consist of at least 8 characters</string>
-    <string name="password_blank">Retype your password can\'t be blank</string>
-    <string name="pass_match">Passwords not matched</string>
+    <string name="password_blank">Retype your password. It can\'t be blank</string>
+    <string name="pass_match">Passwords did not matched</string>
     <string name="notification_trip_update">You\'ll not get notification if your trip is updated</string>
     <string name="reques_pending">(Request pending)</string>
     <string name="ratting_submitted">Rating submitted successfully!</string>
@@ -287,19 +283,19 @@
     <string name="destination_location">Destination location</string>
     <string name="no_on_going_trip">You do not have any ongoing trip</string>
     <string name="no_trip">No trip found</string>
-    <string name="can_not_start_trip">You can\'t start trip until all passengers are marked as pickup.\nIf a passenger is not showed up you need to mark as Not Showed Up</string>
+    <string name="can_not_start_trip">You can\'t start trip until all passengers are marked as picked up.\nIf a passenger is not showed up you need to mark as Not Showed Up</string>
     <string name="search_results">Search results for Trip</string>
     <string name="set_up_trip">Set Up Your Trip</string>
     <string name="price">Price</string>
     <string name="seats_left">Seats Left</string>
-    <string name="no_seats_available">No seats available</string>
+    <string name="no_seats_available">No seat available</string>
     <string name="review_posted_success">Review posted successfully</string>
     <string name="trip">Trip</string>
-    <string name="comment_required">Comment Required</string>
+    <string name="comment_required">Comment field can\’t be empty</string>
     <string name="select_rating">Please select rating</string>
 
     <string name="request_rejected">(Request rejected)</string>
-    <string name="restriction_weight_text">Please provide any luggage size or weight restrictions for each passenger.</string>
+    <string name="restriction_weight_text">Please provide luggage size or weight restrictions for passengers.</string>
     <string name="hand_carry">Hand carry</string>
     <string name="luggage_weight">weight (kg)</string>
     <string name="suitcase">Suitcase</string>
@@ -308,7 +304,7 @@
     <string name="pets_allowed">Pets Allowed</string>
     <string name="language">Language</string>
     <string name="driver">Driver</string>
-    <string name="remaining_time_more_than_12h">You can\'t start pickup passengers 12 hours before.</string>
+    <string name="remaining_time_more_than_12h">You can start picking up passengers 12 hours before the trip start time.</string>
     <string name="alert">Alert</string>
     <string name="sure_cancel_trip">Are you sure you want to cancel this trip. If you\'ll cancel this trip, your confirmed bookings will be refunded as well.</string>
     <string name="pickup_status">Pickup Status</string>
@@ -318,12 +314,12 @@
     <string name="get_ready_passenger_details">Driver is coming to you to pick you up.</string>
     <string name="pick_up_passenger_details">Driver marked you as a picked up. if it\'s correct please mark yourself as picked up.</string>
     <string name="not_showed_up_passenger_details">Driver marked you as not showed up. If it\'s not true you can contact support from settings page.</string>
-    <string name="pick_up_driver_details">Trooute wish you sage journey.</string>
+    <string name="pick_up_driver_details">Trooute wishes you safe journey.</string>
     <string name="not_showed_up_driver_details">You have marked as driver not showed up. You can contact support from settings page.</string>
-    <string name="not_showed_up_by_passenger_details">Passenger have marked you didn\'t not showed up. Please pick passenger.</string>
+    <string name="not_showed_up_by_passenger_details">The passenger has marked that you didn\’t show up. Please pick up the passenger.</string>
     <string name="trip_status_Canceled">Update trip status to canceled</string>
     <string name="trip_status_COMPLETED">Update trip status to completed</string>
     <string name="trip_status_INPROGRESS">Update trip status to In Progress</string>
     <string name="invalid_status">Invalid trip status</string>
-    <string name="connect_stripe_create_account">You can\'t create trip. You must have to connect your stripe account to create trip. When we accepts you as driver, we have send you and email to connect your stripe account.</string>
+    <string name="connect_stripe_create_account">You can\’t create the trip. You must have to connect your stripe account to create the trip. When we have approved you as a driver, we send you an email to connect your stripe account.</string>
 </resources>
